--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
               document.getElementById("account").innerHTML = "Your address is: " + account;
               console.log(account);
 
+
+
               // Make a POST request to the Gitcoin Scorer API
               fetch('https://api.scorer.gitcoin.co/registry/submit-passport', {
                   method: 'POST',
@@ -39,11 +41,35 @@
                       const addressScore = data.score !== undefined ? data.score : 0;
                       document.getElementById("score").innerHTML = "Your score is: " + addressScore;
 
-                      // Use getElementById and if statement to display the score status
+                      // Existing code to update scoreIndicator
                       if (addressScore >= 20) {
                           document.getElementById("scoreIndicator").innerHTML = '<i class="fa-duotone fa-check text-green-500"></i> Score 20 or above';
+
+                          // Add the button to the claimButtonContainer
+                          document.getElementById("claimButtonContainer").innerHTML = `
+      <button id="claimButton"
+          class="rounded-md bg-indigo-600 px-2.5 py-1.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
+        Claim
+      </button>
+    `;
+
+                          // Add event listener to the button
+                          document.getElementById("claimButton").addEventListener("click", function() {
+                              // Perform GET request to your localhost URL
+                              fetch(`http://localhost:8080/mintnft?classSymbol=REGEN1&nftID=NFT0001&recipientAddress=${account}`)
+                                  .then(response => response.json())
+                                  .then(data => {
+                                      // Handle the response data here
+                                      console.log('Mint NFT Response:', data);
+                                  })
+                                  .catch(error => {
+                                      console.error('Mint NFT Error:', error);
+                                  });
+                          });
+
                       } else {
                           document.getElementById("scoreIndicator").innerHTML = '<i class="fa-duotone fa-x text-red-500"></i> Below 20';
+                          document.getElementById("claimButtonContainer").innerHTML = '';  // Remove the button
                       }
 
                       console.log('Address Score:', addressScore);
@@ -323,10 +349,10 @@
           <img
               src="img/regenscore-social-drop.png"
               alt="" class="w-full object-cover xl:rounded-3xl">
-          <div class="text-center pt-2" id="scoreButton3">
+          <div class="text-center pt-2" id="claimButtonContainer">
             <button
-                class="rounded-md bg-indigo-600 px-2.5 py-1.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
-              Claim
+                class="rounded-md bg-gray-400 px-2.5 py-1.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
+              Not eligible
             </button>
           </div>
         </div>
@@ -334,7 +360,7 @@
           <img
               src="img/regenscore-stamp-drop.png"
               alt="" class="w-full object-cover xl:rounded-3xl">
-          <div class="text-center pt-2">
+          <div class="text-center pt-2" >
             <button
                 class="rounded-md bg-indigo-600 px-2.5 py-1.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
               Claim
