--- a/index.html
+++ b/index.html
@@ -329,8 +329,8 @@
           </div>
           <form id="walletAddressForm">
             <label for="walletAddress">Enter Coreum your wallet address:</label>
-            <input type="text" id="walletAddress" name="walletAddress" required>
-            <input type="submit" value="Submit">
+            <input type="text" id="walletAddress" name="walletAddress" class="border" required>
+            <input class="rounded-md bg-gray-400 px-2.5 py-1.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" type="submit" value="Submit">
           </form>
 
         </div>
