--- a/index.html
+++ b/index.html
@@ -10,20 +10,13 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.7.4-rc.1/web3.min.js"></script>
   <script>
 
-      // Add an event listener to the form
-      document.getElementById("walletAddressForm").addEventListener("submit", function(event) {
-          // Prevent default form submission
-          event.preventDefault();
-
-          // Get the value of the wallet address input
-          const walletAddress = document.getElementById("walletAddress").value;
-
-          // Do something with the wallet address (e.g., validate, display it, or send it to an API)
-          console.log("Entered wallet address: ", walletAddress);
-
-          // Here you can call any function to handle the entered wallet address
-          // For example, fetch data from an API
-          // fetchData(walletAddress);
+      document.addEventListener("DOMContentLoaded", function() {
+          // This block of code will run after the page is fully loaded
+          document.getElementById("walletAddressForm").addEventListener("submit", function(event) {
+              event.preventDefault();
+              const walletAddress = document.getElementById("walletAddress").value;
+              console.log("Entered wallet address:", walletAddress);
+          });
       });
 
 
@@ -374,7 +367,7 @@
               alt="" class="w-full object-cover xl:rounded-3xl">
           <div class="text-center pt-2" id="claimButtonContainer">
             <button
-                class="rounded-md bg-gray-400 px-2.5 py-1.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
+                class="rounded-md bg-indigo-600 px-2.5 py-1.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
               Not eligible
             </button>
           </div>
